--- a/css-grid/assets/css/style.css
+++ b/css-grid/assets/css/style.css
@@ -63,3 +63,31 @@ body {
 .item:hover {
     box-shadow: 0px 0px 20px purple;
 }
+
+.item2 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.item6 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+
+    grid-row-start: 4;
+    grid-row-end: 7;
+}
+
+.item7 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    /* Para linhas precisa incluir também o posicionamento da coluna, se não ele irá perder essa informação e consequentemente o seu posicionamento também */
+
+    grid-row-start: 4;
+    grid-row-end: 6;
+}
+
+.item8 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
